project/k8s/ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp
spec:
  ingressClassName: nginx
  rules:
    - host: app.test.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: myapp
                port:
                  number: 80
